fix(mobile): use overflow-x: clip over hidden to fix Intersection Observer on Framer Motion

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,6 +79,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
+  max-width: 100vw;
+  overflow-x: clip;
 }
 
 ::selection {
